“moj-drugi-commit”

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moje Portfolio - Szablon Lekcyjny</title>
+    <title>Moje Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,6 +15,7 @@
             <nav>
                 <div class="logo">Portfolio: Lidia Boruch</div>
             </nav>
+
             <script src="main.js"></script>
             <button onclick="zmiana(this)" style="width: 100px; height: 100px;">Kliknij</button>
 
